--- a/workspace/templates/app/index.html
+++ b/workspace/templates/app/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<button type="submit"><a href="">S'Enregistrer</a></button>
-<button type="submit"><a href="">Se Connecter</a></button>
-<button type="submit"><a href="">Se Deconnecter</a></button>
+<button type="submit"><a href="/register">S'Enregistrer</a></button>
+<button type="submit"><a href="/login">Se Connecter</a></button>
+<button type="submit"><a href="/logout">Se Deconnecter</a></button>
 {% endblock %}
