--- a/workspace/templates/app/login.html
+++ b/workspace/templates/app/login.html
@@ -1,5 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h4>Se connnecter Ici </h4>
+    <form action="login" method="post">
+        {% csrf_token %}
+       <label for="username">Username</label>
+       <input type="text" name="username" id="username" placeholder="Entrer votre username" required>
+       <br><br>
+       <label for="password">Password</label>
+       <input type="password" name="password" id="password" placeholder="Entrer password" required>
+       <br><br>
+
+       <button type="submit">Se Connecter</button>
+
+    </form>
 
 {% endblock %}
